--- a/index.html
+++ b/index.html
@@ -6,57 +6,61 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <header>
-    <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-    <nav>
+    <header class="header">
+      <a href="./index.html" lang="en" class="header-logo"><span class="logo">Web</span>Studio</a>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link studio" href="./index.html">Студія</a></li>
+          <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./porfolio.html">Портфоліо</a></li>
-        <li><a href="#">Контакти</a></li>
+        <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
+    </header>
   <main>
     <!--Замовити послугу-->
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
+    <section class="order">
+      <h1 class="order-title">Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" class="order-button">Замовити послугу</button>
     </section>
     <!--Особливості-->
     <section>
       <h2>Особливості</h2>
       <ul>
-        <li>
-          <h3>Увага до деталей</h3>
-          <p>
+        <li class="list-item">
+          <h3 class="peculiarities-title">Увага до деталей</h3>
+          <p class="peculiarities-text">
             Ідейні міркування, і навіть початок повсякденної роботи з
             формування позиції.
           </p>
         </li>
-        <li>
-          <h3>Пунктуальність</h3>
-          <p>
+        <li class="list-item">
+          <h3 class="peculiarities-title">Пунктуальність</h3>
+          <p class="peculiarities-text">
             Завдання організації, особливо рамки і місце навчання кадрів тягне
             у себе.
           </p>
         </li>
-        <li>
-          <h3>Планування</h3>
-          <p>
+        <li class="list-item">
+          <h3 class="peculiarities-title">Планування</h3>
+          <p class="peculiarities-text">
             Так само консультація з широким активом значною мірою зумовлює.
           </p>
         </li>
-        <li>
-          <h3>Cучасні технології</h3>
-          <p>
+        <li class="list-item">
+          <h3 class="peculiarities-title">Cучасні технології</h3>
+          <p class="peculiarities-text">
             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
           </p>
         </li>
@@ -64,61 +68,63 @@
     </section>
     <!--Чим займаємось-->
     <section>
-      <h2>Чим ми займаємося</h2>
+      <h2 class="work-title">Чим ми займаємося</h2>
       <ul>
-        <li>
+        <li class="list-item">
           <img src="./image/img1.jpg" alt="Людина пише код" width="370" />
         </li>
-        <li>
+        <li class="list-item">
           <img src="./image/img2.jpg" alt="Людина обирає собі чохол" width="370" />
         </li>
-        <li>
+        <li class="list-item">
           <img src="./image/img3.jpg" alt="Планшет в руці" width="370" />
         </li>
       </ul>
     </section>
     <!--Команда-->
-    <section>
-      <h2>Наша команда</h2>
+    <section class="team-section">
+      <h2 class="team-title">Наша команда</h2>
       <ul>
-        <li>
+        <li class="list-item">
           <img src="./image/teamcard1.jpg" alt="Фото Ігор Дем'яненко" width="270" />
-          <h3>Ігор Дем'яненко</h3>
-          <p lang="en">Product Designer</p>
+          <h3 class="team-item-title">Ігор Дем'яненко</h3>
+          <p class="team-text" lang="en">Product Designer</p>
         </li>
-        <li>
+        <li class="list-item">
           <img src="./image/teamcard2.jpg" alt="Фото Ольга Рєпіна" width="270" />
-          <h3>Ольга Рєпіна</h3>
-          <p lang="en">Frontend Developer</p>
+          <h3 class="team-item-title">Ольга Рєпіна</h3>
+          <p class="team-text" lang="en">Frontend Developer</p>
         </li>
-        <li>
+        <li class="list-item">
           <img src="./image/teamcard3.jpg" alt="Фото Микола Тарасов" width="270" />
-          <h3>Микола Тарасов</h3>
-          <p lang="en">Marketing</p>
+          <h3 class="team-item-title">Микола Тарасов</h3>
+          <p class="team-text" lang="en">Marketing</p>
         </li>
-        <li>
+        <li class="list-item">
           <img src="./image/teamcard4.jpg" alt="Фото Михайло Єрмаков" width="270" />
-          <h3>Михайло Єрмаков</h3>
-          <p lang="en">UI Designer</p>
+          <h3 class="team-item-title">Михайло Єрмаков</h3>
+          <p class="team-text" lang="en">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-    <address>
-      <ul>
-        <li>
-          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
-            пр-т Лесі Українки, 26</a>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
-  </footer>
+    <footer class="footer">
+      <a href="./index.html" lang="en" class="header-logo footer"><span class="logo">Web</span>Studio</a>
+      <address>
+        <ul>
+          <li class="footer-item">
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+              class="footer-link adress">м.
+              Київ,
+              пр-т Лесі Українки, 26</a>
+          </li>
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br />
+          </li>
+          <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
 </body>
 
 </html>
