--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <a href="./index.html" lang="en" class="header-logo"><span class="logo">Web</span>Studio</a>
       <nav>
         <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link studio" href="./index.html">Студія</a></li>
-          <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+          <li class="nav-item marker"><a class="nav-link studio" href="./index.html">Студія</a></li>
+          <li class="nav-item marker"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="nav-item marker"><a class="nav-link" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="header-item marker"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-item marker"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
   <main>
@@ -36,29 +36,29 @@
     </section>
     <!--Особливості-->
     <section>
-      <h2>Особливості</h2>
+      <h2 class="invisible-title">Особливості</h2>
       <ul>
-        <li class="list-item">
+        <li class="list-item marker">
           <h3 class="peculiarities-title">Увага до деталей</h3>
           <p class="peculiarities-text">
             Ідейні міркування, і навіть початок повсякденної роботи з
             формування позиції.
           </p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <h3 class="peculiarities-title">Пунктуальність</h3>
           <p class="peculiarities-text">
             Завдання організації, особливо рамки і місце навчання кадрів тягне
             у себе.
           </p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <h3 class="peculiarities-title">Планування</h3>
           <p class="peculiarities-text">
             Так само консультація з широким активом значною мірою зумовлює.
           </p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <h3 class="peculiarities-title">Cучасні технології</h3>
           <p class="peculiarities-text">
             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -70,13 +70,13 @@
     <section>
       <h2 class="work-title">Чим ми займаємося</h2>
       <ul>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/img1.jpg" alt="Людина пише код" width="370" />
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/img2.jpg" alt="Людина обирає собі чохол" width="370" />
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/img3.jpg" alt="Планшет в руці" width="370" />
         </li>
       </ul>
@@ -85,22 +85,22 @@
     <section class="team-section">
       <h2 class="team-title">Наша команда</h2>
       <ul>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/teamcard1.jpg" alt="Фото Ігор Дем'яненко" width="270" />
           <h3 class="team-item-title">Ігор Дем'яненко</h3>
           <p class="team-text" lang="en">Product Designer</p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/teamcard2.jpg" alt="Фото Ольга Рєпіна" width="270" />
           <h3 class="team-item-title">Ольга Рєпіна</h3>
           <p class="team-text" lang="en">Frontend Developer</p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/teamcard3.jpg" alt="Фото Микола Тарасов" width="270" />
           <h3 class="team-item-title">Микола Тарасов</h3>
           <p class="team-text" lang="en">Marketing</p>
         </li>
-        <li class="list-item">
+        <li class="list-item marker">
           <img src="./image/teamcard4.jpg" alt="Фото Михайло Єрмаков" width="270" />
           <h3 class="team-item-title">Михайло Єрмаков</h3>
           <p class="team-text" lang="en">UI Designer</p>
@@ -112,13 +112,13 @@
       <a href="./index.html" lang="en" class="header-logo footer"><span class="logo">Web</span>Studio</a>
       <address>
         <ul>
-          <li class="footer-item">
+          <li class="footer-item marker">
             <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
               class="footer-link adress">м.
               Київ,
               пр-т Лесі Українки, 26</a>
           </li>
-          <li class="footer-item">
+          <li class="footer-item marker">
             <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br />
           </li>
           <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
