--- a/portfolio.html
+++ b/portfolio.html
@@ -19,80 +19,80 @@
         <a href="./index.html" lang="en" class="header-logo"><span class="logo">Web</span>Studio</a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="./index.html">Студія</a></li>
-                <li class="nav-item"><a class="nav-link portfolio" href="./portfolio.html">Портфоліо</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+                <li class="nav-item marker"><a class="nav-link" href="./index.html">Студія</a></li>
+                <li class="nav-item marker"><a class="nav-link portfolio" href="./portfolio.html">Портфоліо</a></li>
+                <li class="nav-item marker"><a class="nav-link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="header-item marker"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item marker"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <ul class="list-button">
-            <li class="list-item"><button type="button" class="button">Усі</button>
+            <li class="button-item marker"><button type="button" class="button">Усі</button>
             </li>
-            <li class="list-item"><button type="button" class="button">Веб-сайти</button>
+            <li class="button-item marker"><button type="button" class="button">Веб-сайти</button>
             </li>
-            <li class="list-item"><button type="button" class="button">Додатки</button>
+            <li class="button-item marker"><button type="button" class="button">Додатки</button>
             </li>
-            <li class="list-item"><button type="button" class="button">Дизайн</button>
+            <li class="button-item marker"><button type="button" class="button">Дизайн</button>
             </li>
-            <li class="list-item"><button type="button" class="button">Маркетинг</button>
+            <li class="button-item marker"><button type="button" class="button">Маркетинг</button>
             </li>
         </ul>
         <section>
-            <h1 class="title">Проекти</h1>
+            <h1 class="invisible-title">Проекти</h1>
             <ul class="list">
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project1.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project1.jpg" width="370"
                             alt="Анкети 3х дюдей">
                         <h2 class="item-title">Технокряк</h2>
                         <p class="item-text">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project2.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project2.jpg" width="370"
                             alt="Два волейболіста">
                         <h2 class="item-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
                         <p class="item-text">Дизайн</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project3.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project3.jpg" width="370"
                             alt="Реклама ресторану">
                         <h2 class="item-title"> Ресторан <span lang="en">Seafood</span> </h2>
                         <p class="item-text">Додаток</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project4.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project4.jpg" width="370"
                             alt="Навушники">
                         <h2 class="item-title">Проєкт <span lang="en">Prime</span></h2>
                         <p class="item-text">Маркетинг</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project5.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project5.jpg" width="370"
                             alt="Біла та коричнева коробки">
                         <h2 class="item-title">Проєкт <span lang="en">Boxes</span></h2>
                         <p class="item-text">Додаток</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project6.jpg"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project6.jpg"
                             alt="На зоображенні монітор">
                         <h2 class="item-title" lang="en">Inspiration has no Borders</h2>
                         <p class="item-text">Веб-сайт</p>
                     </a></li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project7.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project7.jpg" width="370"
                             alt="На зоображенні книга">
                         <h2 class="item-title"><span lang="en">Видання Limited Edition</span></h2>
                         <p class="item-text">Дизайн</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project8.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project8.jpg" width="370"
                             alt="Етикетка">
                         <h2 class="item-title">Проєкт<span lang="en">LAB</span></h2>
                         <p class="item-text">Маркетинг</p>
                     </a>
                 </li>
-                <li class="list-item"><a class="item-link" href="#"><img src="./image/project9.jpg" width="370"
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project9.jpg" width="370"
                             alt="Людина працює на ноутбуці">
                         <h2 class="item-title" lang="en">Growing Business</h2>
                         <p class="item-text">Додаток</p>
