--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,8 @@
             </ul>
         </nav>
         <ul>
-            <li class="header-item marker"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item marker"><a class="header-link"
+                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="header-item marker"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
@@ -45,32 +46,32 @@
         <section>
             <h1 class="invisible-title">Проекти</h1>
             <ul class="list">
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project1.jpg" width="370"
-                            alt="Анкети 3х дюдей">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project1.jpg"
+                            width="370" alt="Анкети 3х дюдей">
                         <h2 class="item-title">Технокряк</h2>
                         <p class="item-text">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project2.jpg" width="370"
-                            alt="Два волейболіста">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project2.jpg"
+                            width="370" alt="Два волейболіста">
                         <h2 class="item-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
                         <p class="item-text">Дизайн</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project3.jpg" width="370"
-                            alt="Реклама ресторану">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project3.jpg"
+                            width="370" alt="Реклама ресторану">
                         <h2 class="item-title"> Ресторан <span lang="en">Seafood</span> </h2>
                         <p class="item-text">Додаток</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project4.jpg" width="370"
-                            alt="Навушники">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project4.jpg"
+                            width="370" alt="Навушники">
                         <h2 class="item-title">Проєкт <span lang="en">Prime</span></h2>
                         <p class="item-text">Маркетинг</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project5.jpg" width="370"
-                            alt="Біла та коричнева коробки">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project5.jpg"
+                            width="370" alt="Біла та коричнева коробки">
                         <h2 class="item-title">Проєкт <span lang="en">Boxes</span></h2>
                         <p class="item-text">Додаток</p>
                     </a>
@@ -80,20 +81,20 @@
                         <h2 class="item-title" lang="en">Inspiration has no Borders</h2>
                         <p class="item-text">Веб-сайт</p>
                     </a></li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project7.jpg" width="370"
-                            alt="На зоображенні книга">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project7.jpg"
+                            width="370" alt="На зоображенні книга">
                         <h2 class="item-title"><span lang="en">Видання Limited Edition</span></h2>
                         <p class="item-text">Дизайн</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project8.jpg" width="370"
-                            alt="Етикетка">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project8.jpg"
+                            width="370" alt="Етикетка">
                         <h2 class="item-title">Проєкт<span lang="en">LAB</span></h2>
                         <p class="item-text">Маркетинг</p>
                     </a>
                 </li>
-                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project9.jpg" width="370"
-                            alt="Людина працює на ноутбуці">
+                <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project9.jpg"
+                            width="370" alt="Людина працює на ноутбуці">
                         <h2 class="item-title" lang="en">Growing Business</h2>
                         <p class="item-text">Додаток</p>
                     </a>
@@ -106,13 +107,13 @@
         <address>
             <ul>
                 <li class="footer-item">
-                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                        rel="noopener noreferrer nofollow" class="footer-link adress">м.
+                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+                        class="footer-link adress">м.
                         Київ,
                         пр-т Лесі Українки, 26</a>
                 </li>
                 <li class="footer-item">
-                    <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br />
+                    <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br>
                 </li>
                 <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
             </ul>
