--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-    <header class="header">
-      <a href="./index.html" lang="en" class="header-logo"><span class="logo">Web</span>Studio</a>
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-item marker"><a class="nav-link studio" href="./index.html">Студія</a></li>
-          <li class="nav-item marker"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
-          <li class="nav-item marker"><a class="nav-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li class="header-item marker"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-item marker"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <header class="header">
+    <a href="./index.html" lang="en" class="header-logo"><span class="logo">Web</span>Studio</a>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item marker"><a class="nav-link studio" href="./index.html">Студія</a></li>
+        <li class="nav-item marker"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+        <li class="nav-item marker"><a class="nav-link" href="#">Контакти</a></li>
       </ul>
-    </header>
+    </nav>
+    <ul>
+      <li class="header-item marker"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="header-item marker"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </header>
   <main>
     <!--Замовити послугу-->
     <section class="order">
@@ -71,13 +71,13 @@
       <h2 class="work-title">Чим ми займаємося</h2>
       <ul>
         <li class="list-item marker">
-          <img src="./image/img1.jpg" alt="Людина пише код" width="370" />
+          <img src="./image/img1.jpg" alt="Людина пише код" width="370">
         </li>
         <li class="list-item marker">
-          <img src="./image/img2.jpg" alt="Людина обирає собі чохол" width="370" />
+          <img src="./image/img2.jpg" alt="Людина обирає собі чохол" width="370">
         </li>
         <li class="list-item marker">
-          <img src="./image/img3.jpg" alt="Планшет в руці" width="370" />
+          <img src="./image/img3.jpg" alt="Планшет в руці" width="370">
         </li>
       </ul>
     </section>
@@ -86,45 +86,45 @@
       <h2 class="team-title">Наша команда</h2>
       <ul>
         <li class="list-item marker">
-          <img src="./image/teamcard1.jpg" alt="Фото Ігор Дем'яненко" width="270" />
+          <img src="./image/teamcard1.jpg" alt="Фото Ігор Дем'яненко" width="270">
           <h3 class="team-item-title">Ігор Дем'яненко</h3>
           <p class="team-text" lang="en">Product Designer</p>
         </li>
         <li class="list-item marker">
-          <img src="./image/teamcard2.jpg" alt="Фото Ольга Рєпіна" width="270" />
+          <img src="./image/teamcard2.jpg" alt="Фото Ольга Рєпіна" width="270">
           <h3 class="team-item-title">Ольга Рєпіна</h3>
           <p class="team-text" lang="en">Frontend Developer</p>
         </li>
         <li class="list-item marker">
-          <img src="./image/teamcard3.jpg" alt="Фото Микола Тарасов" width="270" />
+          <img src="./image/teamcard3.jpg" alt="Фото Микола Тарасов" width="270">
           <h3 class="team-item-title">Микола Тарасов</h3>
           <p class="team-text" lang="en">Marketing</p>
         </li>
         <li class="list-item marker">
-          <img src="./image/teamcard4.jpg" alt="Фото Михайло Єрмаков" width="270" />
+          <img src="./image/teamcard4.jpg" alt="Фото Михайло Єрмаков" width="270">
           <h3 class="team-item-title">Михайло Єрмаков</h3>
           <p class="team-text" lang="en">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
-    <footer class="footer">
-      <a href="./index.html" lang="en" class="header-logo footer"><span class="logo">Web</span>Studio</a>
-      <address>
-        <ul>
-          <li class="footer-item marker">
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-              class="footer-link adress">м.
-              Київ,
-              пр-т Лесі Українки, 26</a>
-          </li>
-          <li class="footer-item marker">
-            <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br />
-          </li>
-          <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
+  <footer class="footer">
+    <a href="./index.html" lang="en" class="header-logo footer"><span class="logo">Web</span>Studio</a>
+    <address>
+      <ul>
+        <li class="footer-item marker">
+          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+            class="footer-link adress">м.
+            Київ,
+            пр-т Лесі Українки, 26</a>
+        </li>
+        <li class="footer-item marker">
+          <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br>
+        </li>
+        <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
 </body>
 
 </html>
