--- a/portfolio.html
+++ b/portfolio.html
@@ -106,16 +106,17 @@
         <a href="./index.html" lang="en" class="header-logo footer"><span class="logo">Web</span>Studio</a>
         <address>
             <ul>
-                <li class="footer-item">
+                <li class="footer-item marker">
                     <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
                         class="footer-link adress">м.
                         Київ,
                         пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="footer-item">
+                <li class="footer-item marker">
                     <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br>
                 </li>
-                <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+                <li class="footer-item marker"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
