--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <li class="footer-item marker">
           <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a> <br>
         </li>
-        <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+        <li class="footer-item marker"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer>
