--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <!--Особливості-->
     <section>
-      <h2 class="invisible-title">Особливості</h2>
+      <h2 class="visually-hidden">Особливості</h2>
       <ul>
         <li class="list-item marker">
           <h3 class="peculiarities-title">Увага до деталей</h3>
