--- a/portfolio.html
+++ b/portfolio.html
@@ -31,20 +31,20 @@
         </ul>
     </header>
     <main>
-        <ul class="list-button">
-            <li class="button-item marker"><button type="button" class="button">Усі</button>
-            </li>
-            <li class="button-item marker"><button type="button" class="button">Веб-сайти</button>
-            </li>
-            <li class="button-item marker"><button type="button" class="button">Додатки</button>
-            </li>
-            <li class="button-item marker"><button type="button" class="button">Дизайн</button>
-            </li>
-            <li class="button-item marker"><button type="button" class="button">Маркетинг</button>
-            </li>
-        </ul>
-        <section>
-            <h1 class="invisible-title">Проекти</h1>
+        <section class="portfolio">
+            <ul class="list-button">
+                <li class="button-item marker"><button type="button" class="button">Усі</button>
+                </li>
+                <li class="button-item marker"><button type="button" class="button">Веб-сайти</button>
+                </li>
+                <li class="button-item marker"><button type="button" class="button">Додатки</button>
+                </li>
+                <li class="button-item marker"><button type="button" class="button">Дизайн</button>
+                </li>
+                <li class="button-item marker"><button type="button" class="button">Маркетинг</button>
+                </li>
+            </ul>
+            <h1 class="visually-hidden">Проекти</h1>
             <ul class="list">
                 <li class="project-item marker"><a class="item-link" href="#"><img src="./image/project1.jpg"
                             width="370" alt="Анкети 3х дюдей">
