Последние правки дз2

--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
     <section class="team-section">
       <h2 class="team-title">Наша команда</h2>
       <ul>
-        <li class="list-item marker">
+        <li class="team-item marker">
           <img src="./image/teamcard1.jpg" alt="Фото Ігор Дем'яненко" width="270">
           <h3 class="team-item-title">Ігор Дем'яненко</h3>
           <p class="team-text" lang="en">Product Designer</p>
         </li>
-        <li class="list-item marker">
+        <li class="team-item marker">
           <img src="./image/teamcard2.jpg" alt="Фото Ольга Рєпіна" width="270">
           <h3 class="team-item-title">Ольга Рєпіна</h3>
           <p class="team-text" lang="en">Frontend Developer</p>
         </li>
-        <li class="list-item marker">
+        <li class="team-item marker">
           <img src="./image/teamcard3.jpg" alt="Фото Микола Тарасов" width="270">
           <h3 class="team-item-title">Микола Тарасов</h3>
           <p class="team-text" lang="en">Marketing</p>
         </li>
-        <li class="list-item marker">
+        <li class="team-item marker">
           <img src="./image/teamcard4.jpg" alt="Фото Михайло Єрмаков" width="270">
           <h3 class="team-item-title">Михайло Єрмаков</h3>
           <p class="team-text" lang="en">UI Designer</p>
